# Skylock

./: .criterion.json  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  GAMEPLAN.md  GITHUB_ISSUES_SUMMARY.md  INCREMENTAL_BACKUP_GUIDE.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_v0.6.0.md  RESTART_QUICK_REFERENCE.md  RESTORE_GUIDE.md  RESTORE_IMPLEMENTATION.md  SCHEDULING_GUIDE.md  SECURITY.md  SECURITY_ADVISORY_0.5.1.md  SECURITY_AUDIT.md  SECURITY_FIX_GAMEPLAN.md  SESSION_SUMMARY_v0.5.1.md  USAGE.md  VERIFICATION_GUIDE.md  WARP.md  build.rs  config.sample.toml  deny.toml  install.sh  simple_webdav_test.rs  test_config.toml  test_hetzner.rs  test_list_backups.sh  test_resume.sh  test_upload.sh  uninstall.sh
.github/: RELEASE_NOTES_v0.6.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: performance_benchmarks.rs
docs/: OPTION_A_IMPLEMENTATION.md  RESUME_FEATURE.md  SECURITY_INCIDENT_2025-11-07.md
docs/assessments/: ASSESSMENT_2025_11_27.md
docs/plans/: COMPETITIVE_ENHANCEMENT_PLAN.md  IMPLEMENTATION_GAMEPLAN.md
docs/security/: AUDIT_v0_5_1.md  ENCRYPTION_ARCHITECTURE.md  MANIFEST_SIGNING_IMPLEMENTATION.md  SECURITY_ADVISORY_0.6.0.md  SECURITY_AUDIT_COMPREHENSIVE.md
scripts/: install-timer.sh
skylock-backup/: Cargo.toml
skylock-backup/src/: bandwidth.rs  browser.rs  change_tracker.rs  chunking.rs  compression_config.rs  compression_integrity.rs  connection_pool.rs  continuous.rs  coordinator.rs  dedup.rs  diff.rs  direct_upload.rs  encrypted_manifest.rs  encryption.rs  error.rs  forward_secrecy.rs  hmac_integrity.rs  hsm_provider.rs  integrity.rs  key_rotation.rs  lib.rs  manifest_signing.rs  migration.rs  parallel_hash.rs  parallelism.rs  restore.rs  resume_state.rs  retention.rs  scheduler.rs  sync_queue.rs  sync_state.rs  verification.rs  vss.rs  watcher.rs
skylock-core/: Cargo.toml
skylock-core/src/: config.rs  encryption.rs  error_types.rs  lib.rs  mod.rs  mount.rs  notifications.rs  recovery.rs  scheduler.rs  virtual_drive.rs
skylock-core/src/audit/: events.rs  logger.rs  mod.rs  storage.rs
skylock-core/src/backup/: compression.rs  dedup.rs  mod.rs  processor.rs  restore.rs  retention.rs  storage.rs  verification.rs
skylock-core/src/compression/: mod.rs
skylock-core/src/config/: sync.rs  validation.rs
skylock-core/src/error/: handler.rs  mod.rs  tests.rs  tests.rs.new  types.rs
skylock-core/src/error/backup/: error_types.rs.old  types.rs.new
skylock-core/src/monitoring/: mod.rs  performance.rs
skylock-core/src/recovery/: mod.rs
skylock-core/src/security/: backup.rs  cloud_storage.rs  credentials.rs  error.rs  hsm.rs  key_manager.rs  mod.rs  monitoring.rs  nonce_derivation.rs  rate_limiter.rs  types.rs  versioning.rs
skylock-core/src/security/tests/: key_manager_tests.rs
skylock-core/src/storage/: hetzner.rs  local.rs  mod.rs  unified.rs  webdav.rs
skylock-core/src/storage/providers/: aws.rs  azure.rs  backblaze.rs  gcp.rs  hetzner.rs  local.rs  mod.rs  s3_compatible.rs
skylock-core/src/sync/: batch.rs  checksum.rs  conflict.rs  mod.rs  remote.rs
skylock-core/tests/: compression_tests.rs  integration_tests.rs  key_manager_tests.rs  performance_tests.rs
skylock-hetzner/: Cargo.toml
skylock-hetzner/src/: api.rs  lib.rs  metadata_encryption.rs  sftp.rs  sftp_secure.rs  tls_pinning.rs  webdav.rs
skylock-monitor/: Cargo.toml
skylock-monitor/src/: coordinator.rs  error.rs  lib.rs  monitor.rs  monitoring.rs  notifier.rs  reporter.rs  reporting.rs
skylock-sync/: Cargo.toml
skylock-sync/src/: error.rs  file_info.rs  file_manager.rs  indexer.rs  lib.rs  mass_sync.rs  metadata.rs  organizer.rs  scanner.rs  sync_engine.rs  tag_manager.rs  watcher.rs
skylock-ui/: Cargo.toml
skylock-ui/src/: app.rs  lib.rs  notification_view.rs  settings.rs  status.rs  style.rs
src/: backup.rs  cleanup.rs  config.rs  error_display.rs  init.rs  lib.rs  logging.rs  main.rs  notifications.rs  progress.rs  scheduler.rs  stubs.rs  test_build.rs
src/cli/: mod.rs
src/compression/: mod.rs
src/crypto/: encryption.rs  mod.rs  rsa_keys.rs  signatures.rs
src/deduplication/: mod.rs
src/error_handler/: mod.rs
src/monitoring/: mod.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/restore/: mod.rs
systemd/: skylock-backup.service  skylock-backup.timer  skylock-watch.service
test_backup_data/: file2.txt
tests/: e2e_integration_tests.rs  error_handling_tests.rs  incremental_tests.rs  integration_tests.rs  thread_safety_tests.rs  unix_platform_tests.rs  windows_platform_tests.rs
web-dashboard/: DESIGN_SPECS.md
web-dashboard/backend/: Cargo.toml
web-dashboard/backend/src/: main.rs
web-dashboard/frontend/: package.json  tailwind.config.js
web-dashboard/frontend/src/: App.tsx  index.css
web-dashboard/frontend/src/components/layout/: Header.tsx  Layout.tsx
web-dashboard/frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx
web-dashboard/frontend/src/hooks/: useSystemStatus.ts
web-dashboard/frontend/src/lib/: api.ts
web-dashboard/frontend/src/providers/: ThemeProvider.tsx  WebSocketProvider.tsx
