[package]
name = "skylock-hybrid"
version = "0.5.1"
edition = "2021"
rust-version = "1.70"
resolver = "2"

[workspace]
members = [
    "skylock-core",
    "skylock-hetzner",
    "skylock-backup",
    "skylock-ui",
    "skylock-monitor",
    "skylock-sync"
]

[dependencies]
skylock-core = { path = "./skylock-core" }
skylock-hetzner = { path = "./skylock-hetzner" }
skylock-backup = { path = "./skylock-backup" }
skylock-ui = { path = "./skylock-ui" }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
config = { version = "0.13", default-features = false, features = ["toml"] }
directories = "5.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
cron = "0.12"
rpassword = "7.0"
toml = "0.8"
indicatif = "0.17"
colored = "2.0"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rsa = "0.9"
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8", "pem"] }
sha2 = "0.10"
hmac = "0.12"
pkcs8 = { version = "0.10", features = ["pem"] }
base64ct = "=1.6.0"
base64 = "0.22"

# Compression
lz4 = "1.24"
zstd = "0.13"
brotli = "6.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }

# Networking
tokio-tungstenite = "0.24"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = "9.0"

# Monitoring and metrics
prometheus = "0.13"
opentelemetry = "0.24"
tracing-opentelemetry = "0.25"

# File system monitoring
notify = "6.0"
walkdir = "2.0"

# Additional dependencies
bincode = "1.3"
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
tempfile = "3.21.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
crc32fast = "1.4"

# Library configuration for testing
[lib]
name = "skylock_hybrid"
path = "src/lib.rs"

[[bin]]
name = "skylock"
path = "src/main.rs"

[[bin]]
name = "test_build"
path = "src/test_build.rs"

[[bin]]
name = "test_hetzner"
path = "test_hetzner.rs"

[[bin]]
name = "simple_webdav_test"
path = "simple_webdav_test.rs"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Storage_Vss", "Win32_System_Com"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user"] }
notify-rust = "4.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.11"
test-case = "3.1"
serde_json = "1.0.143"
tempfile = "3.21.0"
tokio = { version = "1.32", features = ["full", "test-util", "macros"] }

[[bench]]
name = "performance_benchmarks"
harness = false
