[package]
name = "skylock-hetzner"
version = "0.1.0"
edition = "2021"

[dependencies]
skylock-core = { path = "../skylock-core" }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
tracing = "0.1"
bytes = "1.4"
futures-util = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.21"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
async-ssh2 = { version = "0.1.2-beta" }
futures = "0.3"
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.8"
indicatif = "0.17"
