[package]
name = "skylock-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
skylock-core = { path = "../skylock-core" }
skylock-hetzner = { path = "../skylock-hetzner" }
skylock-sync = { path = "../skylock-sync" }
tokio = { version = "1.32", features = ["full"] }
notify = "6.1"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
