[package]
name = "skylock-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
skylock-core = { path = "../skylock-core" }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
url = "2.4"
thiserror = "1.0"
