[package]
name = "skylock-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
skylock-core = { path = "../skylock-core" }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"

# Windows-only GUI dependencies
[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
