[package]
name = "skylock-ui"
version = "0.8.0"
edition = "2021"
description = "Skylock GUI - Minimalistic backup management interface"

[[bin]]
name = "skylock-gui"
path = "src/bin/skylock-gui.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["eframe", "egui", "egui_extras", "image"]

[dependencies]
skylock-core = { path = "../skylock-core" }
skylock-backup = { path = "../skylock-backup" }
tokio = { version = "1.32", features = ["full", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1.3"

# Cryptographic dependencies for key validation
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"

# GUI dependencies
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence", "x11", "wayland"] }
egui = { version = "0.31", optional = true }
egui_extras = { version = "0.31", optional = true, features = ["all_loaders"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
rfd = "0.15"  # Native file dialogs
dirs = "5.0"  # Platform directories

# Windows-only GUI dependencies (legacy fallback)
[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
